[package]
name = "heimdall-dec"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
serde = { version = "1.0.218", features = ["derive"] }
once_cell = "1.10.0"
serde_json = "1.0"
heimdall-decompiler = { git = "https://github.com/Jon-Becker/heimdall-rs.git", tag = "0.8.6" }
alloy = { version = "0.11.1", features = ["full"] }
alloy-primitives = { version = "0.8.8", features = ["getrandom", "rand"] }
tokio = { version = "1.44.0", features = ["full"] }
futures-util = "0.3.31"